<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FileHunt</string>
    <string name="app_version">App Version</string>
    <string name="internalstorage">Internal Storage</string>
    <string name="externalstorage">External Storage</string>
    <string name="avlbl">Available</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share">Share</string>
    <string name="nav_privacy_policy">Privacy policy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FileHunt</string>
    <string name="nav_header_subtitle">jmm@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="cannotload">can\'t load the site</string>
    <string name="actions_rename">Rename</string>
    <string name="subscibe">Subscribe</string>
    <string name="limit_reminder">you have reached to the limit of hiding files.for further use please subscribe.</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_move">Move</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="action_hide">Hide</string>
    <string name="action_unhide" translatable="false">Unhide</string>
    <string name="delete_file_msgs">Delete file</string>
    <string name="action_details">Details
</string>
    <string name="action_copy">Copy</string>
    <string name="action_share">Share</string>
    <string name="file_provider_authority" translatable="false">com.example.filehunt.provider</string>
    <string name="loading_msg">Loading...</string>
    <string name="msg_set_wall">Setting wallpaper</string>
    <string name="copying_msg">Copying...</string>
    <string name="foldercreatedmsg">folder created successfully</string>
    <string name="menu_selectAll">SELECT ALL</string>
    <string name="menu_unselectAll">UNSELECT ALL</string>
    <string name="menu_paste">Paste</string>
    <string name="cat_Images">Image</string>
    <string name="cat_Videos">Video</string>
    <string name="cat_Audio">Audio</string>
    <string name="cat_Documents">Document</string>
    <string name="cat_Download">Download</string>
    <string name="cat_Animation">Animation</string>
    <string name="cat_Recent">Recent</string>
    <string name="cat_Apk">Apps</string>
    <string name="cat_zip_title">Zip</string>
    <string name="cat_hidden">Locker</string>
    <string name="hdnfiles">Hidden files</string>
    <string name="copy_here">Copy here</string>
    <string name="title_settings">Settings</string>
    <string name="password_hint">Write password</string>
    <string name="cpassword_hint">Confirm password</string>
    <string name="createfolder">CREATE</string>
    <string name="save">SAVE</string>
    <string name="cancel">Cancel</string>
    <string name="create_folder">Create folder</string>
    <string name="encrypt_heading">Locked files</string>
    <string name="password">write password</string>
    <string name="setpassword">Set password</string>
    <string name="file_exists">File already exist.Try new name</string>
    <string name="filenotfound">Cound not get the file to hide</string>
    <string name="directorynotfound">Could not find the directory"</string>
    <string name="decmsg">Preparing files...</string>
    <string name="encmsg">Hiding files...</string>
    <string name="unlocktxt">Unlock</string>
    <string name="rename_success">File renamed successfully</string>
    <string name="rename_failed">Rename failed</string>
    <string name="emty_error">can not be empty</string>
    <string name="foldernamerequire">Folder name required</string>
    <string name="namerequired">Name is required</string>
    <string name="error">Error</string>
    <string name="delfile">file</string>
    <string name="delfiles">files</string>
    <string name="delmsg1">Items deleted</string>
    <string name="delmsg2">Item deleted</string>
    <string name="needsaccesssummary">Please choose the root directory of \t</string>
    <string name="needsaccesssummary1">\tto grant write access to operate </string>
    <string name="permission_txt">Read/Write permission is required</string>
    <string name="open">OPEN</string>
    <string name="deleting_file">Deleting files</string>
    <string name="bigimg">Image size too large</string>
    <string name="nospace">No space available.</string>
    <string name="load_error">can\'t load file</string>
    <string name="play_error">can\'t play file</string>
    <string name="passwordnotmatch">Password does not match</string>
    <string name="Incrct_pswd">Incorrect password</string>
    <string name="type_password">type a password</string>
    <string name="nofile">No files to share</string>
    <string name="filenotcreated">file  not created</string>
    <string name="password_create_error">can\'t create password</string>
    <string name="pressagain">Please press again to exit.</string>
    <string name="folder_exist">folder already exist</string>
    <string name="filedetetd">file deleted</string>
    <string name="app_not_found">Application Not Found </string>
    <string name="unable_get_permission">Unable to get Permission</string>
    <string name="permission_required">Need Permissions</string>
    <string name="storage_permission"> app need stoarge permission.</string>
    <string name="grant_storage">Go to Permissions to Grant storage access</string>
    <string name="sortName">Name</string>
    <string name="lastModified">Last Modified(Date)</string>
    <string name="sortSize">Size</string>
    <string name="type">Group by Type</string>
    <string name="sortby">Sort By</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="done">OK</string>
    <string name="total">Total</string>
    <string name="last_modified">Last Modified : </string>
    <string name="strgdevice">STORAGE DEVICES</string>
    <string name="showfiles">Show hidden files</string>
    <string name="txtsize">Text Size</string>
    <string name="txtsuggestedApps">Suggested apps</string>
    <string name="txtAbout">About</string>
    <string name="dispsmallfile">Display images less than 30 kb</string>
    <string name="hidestorage">Hide device storage</string>
    <string name="error_folder_create">Error while creating folder</string>
    <string name="wallpaper_success">Wallpaper set successfully.</string>
    <string name="wallpaper_error">Could not set wallpaper.</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="num_files">Number of files</string>
    <string name="ttl_size">Total size</string>
    <string name="cls">CLOSE</string>
    <string name="dtls">Details</string>
    <string name="fname">Name</string>
    <string name="lcn">Location</string>
    <string name="sz">Size</string>
    <string name="orntn">Orientation</string>
    <string name="rsltn">Resolution</string>
    <string name="dt">Date</string>
    <string name="grant">Grant</string>
    <string name="need_permission">Need Permissions</string>
    <string name="storage_needed">needs to access your storage.</string>
    <string name="byte_short" translatable="false">B</string>
    <string name="kilo_byte_short" translatable="false">KB</string>
    <string name="mega_byte_short" translatable="false">MB</string>
    <string name="giga_byte_short" translatable="false">GB</string>
    <string name="tera_byte_short" translatable="false">TB</string>
    <string name="peta_byte_short" translatable="false">PB</string>
    <string name="clean_file_size_suffix" translatable="false">%1$s%2$s</string>
    <string name="need_perm">needs permission</string>
    <string name="custom_ui">custom UI disables certain standard permissions needed by</string>
    <string name="need_enable">you need to enable them for</string>
    <string name="towork">to work.</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-7769757158085259~2218192747</string>
    <string name="banner_add_id" translatable="false">ca-app-pub-7769757158085259/4065874309</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-7769757158085259/5753526349</string>
    <string name="ad_unit_id_reward" translatable="false">ca-app-pub-7769757158085259/5906156319</string>
     <string name="txt_remove_adds">Remove adds</string>
    <string name="txtUpdateQuestion">Update Security Questions</string>
    <string name="answer_hint">Enter your answer</string>
    <string name="title_activity_questions">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="do_junk_clean">Clean up</string>
    <string name="boost_phone">Boost phone</string>
    <string name="duplicate_images">Duplicate images</string>
    <string name="boosting">Boosting your device</string>
    <string name="avlbl_ram">Available Ram</string>
    <string name="boost_device">Boost Device</string>
    <string name="ok">OK</string>
    <string name="calculation">Calculating...</string>
    <string name="cleanup">Cleaned</string>
    <string name="found_together">Found together : </string>
    <string name="scanning">Scanning :</string>
    <string name="cleardata">Clear data</string>
    <string name="process_clean">Process cleanup</string>
    <string name="apk_clean">Useless installation package</string>
    <string name="tmp_clean">Temporary Files</string>
    <string name="log_clean">Log file</string>
    <string name="cache_clean">Cache garbage</string>
    <string name="system_cache">System cache</string>
    <string name="title_activity_junk_clean">Recommended cleaning</string>
    <string name="security_ques_title">Security Questions</string>
    <string name="forgot_security_ques_title">Security Questions</string>
    <string name="set_security_ques_title">Set Security Questions</string>
    <string name="update_security_ques_title">Update Answers</string>
    <string name="ques_save">Save</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="security_ques_hint">Enter your answers</string>
    <string name="set_security_ques_hint">Set your answers</string>
    <string name="update_security_ques_hint">Update your answers</string>
    <string name="forgot_security_ques_hint">Enter your answers</string>
   <string name="ques1" >1.&#160; &#160;Your First School?</string>
   <string name="ques2" >2.&#160; &#160;Your Shoes Size?</string>
   <string name="ques3" >3.&#160; &#160;Your Favourite Sport?</string>
    <string name="dialog_title">Memory Booster</string>
    <string name="btn_ok" translatable="false">OK</string>
    <string name="btn_boost" translatable="false">Boost</string>
    <string name="total_mem" translatable="false">Total Memory</string>
    <string name="free_mem">Free Memory</string>
    <string name="used_mem" translatable="false">Used Memory</string>
    <string name="usb_add_whitelist_message" tools:ignore="ExtraTranslation">Do you want to add USB Debugging to white list?</string>
    <string name="usb_remove_whitelist_message" tools:ignore="ExtraTranslation">Do you want to remove USB Debugging from white list?</string>
    <string name="usb_message">Enabling USB debugging is not recommended unless you use your device for software development purposes. Tap Open Settings and disable USB debugging to protect your device</string>
    <string name="system_app_usb_menace_title">USB Debugging Enabled</string>
</resources>