<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:padding="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/headertxt"
                android:text="@string/encrypt_heading"
                android:textSize="@dimen/sp20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>


        <EditText
            android:hint="@string/password"
            android:layout_marginTop="@dimen/dp40"
            android:layout_marginBottom="@dimen/dp3"
            android:id="@+id/encrypt_password_box"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/View_forgotPass"
            android:layout_below="@+id/encrypt_password_box"
            android:text="@string/forgot_pass"
            android:textSize="@dimen/sp14"
            android:padding="@dimen/dp5"
            android:gravity="right"
            android:textColor="@color/colorAccent"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            />

        <TextView
            android:layout_below="@+id/View_forgotPass"
            android:id="@+id/View_encrypt"
            android:text="@string/unlocktxt"
            android:textSize="@dimen/sp16"
            android:padding="@dimen/dp10"
            android:textColor="@color/colorAccent"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp20"/>

        <TextView
            android:layout_below="@+id/View_forgotPass"
            android:id="@+id/View_cancel"
            android:text="@string/cancel"
            android:textSize="@dimen/sp16"
            android:padding="@dimen/dp10"
            android:textColor="@color/colorAccent"
            android:layout_toLeftOf="@+id/View_encrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dp20"/>
    </RelativeLayout>




</RelativeLayout>